Finished HW4 Coding

--- a/HW_Labs/HW4_Lab4/HW4/implementation/index.html
+++ b/HW_Labs/HW4_Lab4/HW4/implementation/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CS171 - Health &amp; Wealth of Nations</title>
+	<title>CS171 - Za'atari Refugee Camp</title>
 
 	<!-- Load CSS files -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -13,12 +13,12 @@
 <body>
 
 	<div class="container text-center">
+		<h1>Za'atari Refugee Camp</h1>
 
-		<h1>Wealth &amp; Health of Nations</h1>
-
-		<!-- Parent container for the scatterplot -->
-		<div id="chart-area"></div>
-
+		<div class="row">
+			<div id="chart-area" class="col-md-6"></div>
+			<div id="chart-bar" class="col-md-6"></div>
+		</div>
 	</div>
 
 
